k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gkshoppy-service
  namespace: gkshoppy
spec:
  selector:
    app: gkshoppy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
